<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideInset"
        android:background="@color/cardColor"
        app:cardCornerRadius="4dp"
        android:elevation="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="2dp">

            <ImageView
                android:id="@+id/search_bar_hint_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/search_hint"
                android:textColorHint="@color/textHint"
                app:layout_constraintEnd_toStartOf="@+id/search_bar_cross"
                app:layout_constraintStart_toEndOf="@+id/search_bar_hint_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/search_bar_cross"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_cross"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/daily_word_card"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:background="@color/cardColor"
        app:cardCornerRadius="4dp"
        android:elevation="8dp">

        <TextView
            android:id="@+id/daily_word"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/daily_words"
            android:textSize="28sp"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/saved_words_card"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideInset"
        app:cardCornerRadius="4dp"
        android:elevation="8dp">

        <TextView
            android:id="@+id/main_saved_words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/saved_words"/>

    </android.support.v7.widget.CardView>



</LinearLayout>